SandBox-2/force-app/main/default/objects/Account/fields/Total_Vaxchora_Doses__c.field-meta.xml
<CustomField>
    <fullName>Total_Vaxchora_Doses__c</fullName>
    <description>For reporting purpose</description>
    <label>Total Vaxchora Doses</label>
    <summarizedField>Sales_Data__c.Doses_Month_0__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Data__c.Name</field>
        <operation>equals</operation>
        <value>VAXCHORA</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Data__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>