SandBox-2/force-app/main/default/objects/Account/fields/Vaxchora_Completion_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Completion_Commitment__c</fullName>
    <formula>Vaxchora_Ordered_Doses__c / Vaxchora_Dose_Commitment__c</formula>
    <inlineHelpText>It shows the percentage of doses ordered with respect to commitment.</inlineHelpText>
    <label>Vaxchora (% Completion) Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>