SandBox-2/force-app/main/default/objects/Account/fields/Vaxchora_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Customer_ID__c</fullName>
    <label>Vaxchora Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>