SandBox-2/force-app/main/default/objects/Account/fields/Vaxchora_Dose_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Dose_Commitment__c</fullName>
    <inlineHelpText>Pricing Campaign_2018</inlineHelpText>
    <label>Vaxchora Dose Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>