SandBox-2/force-app/main/default/objects/Account/fields/Vaxchora_Doses_needed_for_next_tier__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Doses_needed_for_next_tier__c</fullName>
    <inlineHelpText>For all Purple contracts, this field is not applicable 
It shows you how many doses are needed in order to achieve the next contract tier.</inlineHelpText>
    <label>Vaxchora Doses needed for next tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>