SandBox-2/force-app/main/default/objects/Account/fields/Vaxchora_Ordered_Doses__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Ordered_Doses__c</fullName>
    <inlineHelpText>This is to give an update on the number of doses that have been ordered by this customer at any given time related to Pricing Campaign 2018.</inlineHelpText>
    <label>Vaxchora Ordered Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>