SandBox-2/force-app/main/default/objects/Account/fields/Vaxchora_price_offered__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_price_offered__c</fullName>
    <description>This is the Vaxchora price that are offered to the travelers.</description>
    <inlineHelpText>This is the Vaxchora price that are offered to the travelers.</inlineHelpText>
    <label>Vaxchora price offered</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>