SandBox-2/force-app/main/default/objects/Account/fields/Vivotif_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Vivotif_Market_Share__c</fullName>
    <inlineHelpText>Pricing Campaign _2018</inlineHelpText>
    <label>Vivotif Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>