SandBox-2/force-app/main/default/objects/Account/fields/Website_ID__c.field-meta.xml
<CustomField>
    <fullName>Website_ID__c</fullName>
    <label>Website ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>