SandBox-2/force-app/main/default/objects/Account/fields/X1H_PY_Vivotif_Doses__c.field-meta.xml
<CustomField>
    <fullName>X1H_PY_Vivotif_Doses__c</fullName>
    <description>It is the first 6 months of the Vivotif doses from Jan-Jun 30 of the previous year. The CY 1H vivotif goal is dependent on this field.</description>
    <label>1H_PY Vivotif Doses</label>
    <summarizedField>Sales_Data__c.Doses_Month_0__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Data__c.Name</field>
        <operation>equals</operation>
        <value>VIVOTIF BERNA</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Data__c.Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2018</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Data__c.Date__c</field>
        <operation>lessOrEqual</operation>
        <value>6/30/2018</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Data__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>