SandBox-2/force-app/main/default/objects/Account/fields/X2017_Vaxchora_of_Typhoid__c.field-meta.xml
<CustomField>
    <fullName>X2017_Vaxchora_of_Typhoid__c</fullName>
    <formula>if( FY2017_Typhoid_doses__c&gt;0, FY2017_Vaxchora_doses__c / FY2017_Typhoid_doses__c ,null)</formula>
    <label>2017 Vaxchora % of Typhoid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>