SandBox-2/force-app/main/default/objects/Account/fields/X2017_Vivotif_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>X2017_Vivotif_Market_Share__c</fullName>
    <description>2017 Vivotif  market share</description>
    <formula>if( FY2017_Typhoid_doses__c&gt;0, FY2017_Vivotif_doses__c / FY2017_Typhoid_doses__c ,null)</formula>
    <label>2017_Vivotif Market Share(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>