SandBox-2/force-app/main/default/objects/Account/fields/X2017_YTD_Vivotif_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>X2017_YTD_Vivotif_Market_Share__c</fullName>
    <formula>if( X2017_YTD_Typhoid_doses__c &gt;0, X2017_YTD_Vivotif_doses__c / X2017_YTD_Typhoid_doses__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2017 Vivotif Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>