SandBox-2/force-app/main/default/objects/Account/fields/X2018_Full_year_Vivotif_Goal__c.field-meta.xml
<CustomField>
    <fullName>X2018_Full_year_Vivotif_Goal__c</fullName>
    <description>2018 full year Vivotif goal = 1.05 of 2017 FY Vivotif doses</description>
    <formula>FY2017_Vivotif_doses__c *1.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2018_Full year Vivotif Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>