SandBox-2/force-app/main/default/objects/Account/fields/X2018_Vaxchora_Full_Year_Goal__c.field-meta.xml
<CustomField>
    <fullName>X2018_Vaxchora_Full_Year_Goal__c</fullName>
    <formula>FY2017_Typhoid_doses__c*0.03</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2018 Vaxchora Full Year Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>