SandBox-2/force-app/main/default/objects/Account/fields/X2018_Vivotif_YTD_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>X2018_Vivotif_YTD_Market_Share__c</fullName>
    <formula>if( X2018_YTD_Typhoid_Doses__c &gt;0, X2018_YTD_Vivotif_doses__c / X2018_YTD_Typhoid_Doses__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2018 Vivotif YTD Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>