SandBox-2/force-app/main/default/objects/Account/fields/X2018_YTD_Typhoid_Doses__c.field-meta.xml
<CustomField>
    <fullName>X2018_YTD_Typhoid_Doses__c</fullName>
    <label>Previous Year YTD Typhoid Doses</label>
    <summarizedField>Sales_Data__c.Doses_Month_0__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Data__c.Name</field>
        <operation>notEqual</operation>
        <value>VAXCHORA</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Data__c.Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2018</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Data__c.Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2018</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Data__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>