SandBox-2/force-app/main/default/objects/Account/fields/X2018_YTD_Vaxchora_Gap__c.field-meta.xml
<CustomField>
    <fullName>X2018_YTD_Vaxchora_Gap__c</fullName>
    <formula>X2018_YTD_Vaxchora_doses__c - X2018_YTD_Vaxchora_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2018 YTD Vaxchora Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>