SandBox-2/force-app/main/default/objects/Account/fields/X2018_YTD_Vaxchora_of_typhoid__c.field-meta.xml
<CustomField>
    <fullName>X2018_YTD_Vaxchora_of_typhoid__c</fullName>
    <formula>if( X2018_YTD_Typhoid_Doses__c &gt;0, X2018_YTD_Vaxchora_doses__c / X2018_YTD_Typhoid_Doses__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2018 YTD Vaxchora % of typhoid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>