SandBox-2/force-app/main/default/objects/Account/fields/X2018_YTD_Vivotif_Goal__c.field-meta.xml
<CustomField>
    <fullName>X2018_YTD_Vivotif_Goal__c</fullName>
    <description>ytd Vivotif goal based on the 2017 ytd Vivotif doses</description>
    <formula>X2017_YTD_Vivotif_doses__c *1.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2018 YTD Vivotif Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>