SandBox-2/force-app/main/default/objects/Account/fields/X2018_YTD_Vivotif_to_Goal__c.field-meta.xml
<CustomField>
    <fullName>X2018_YTD_Vivotif_to_Goal__c</fullName>
    <formula>if( X2018_YTD_Vivotif_Goal__c&gt;0, X2018_YTD_Vivotif_doses__c / X2018_YTD_Vivotif_Goal__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2018 YTD Vivotif% to Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>