SandBox-2/force-app/main/default/objects/Account/fields/X2019_Vaxchora_doses_YTD__c.field-meta.xml
<CustomField>
    <fullName>X2019_Vaxchora_doses_YTD__c</fullName>
    <label>2019 Vaxchora doses (YTD)</label>
    <summarizedField>Sales_Data__c.Doses_Month_0__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Data__c.Name</field>
        <operation>equals</operation>
        <value>VAXCHORA</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Data__c.Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Data__c.Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2019</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Data__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>