SandBox-2/force-app/main/default/objects/Account/fields/Yellow_fever_vaccination_clinics__c.field-meta.xml
<CustomField>
    <fullName>Yellow_fever_vaccination_clinics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The clinics that will administer yellow fever due to the shortage of YF-Vax( Sanofi) till mid- 2018.</description>
    <inlineHelpText>Check the box if it is one of the yellow fever clinics between mid-2017 until mid-2018</inlineHelpText>
    <label>Yellow fever vaccination clinics</label>
    <type>Checkbox</type>
</CustomField>