SandBox-2/force-app/main/default/objects/Account/listViews/AllSouthwestAccounts.listView-meta.xml
<ListView>
    <fullName>AllSouthwestAccounts</fullName>
    <booleanFilter>1 AND 2 AND 3 And 4 And 5 And 6 And 7</booleanFilter>
    <columns>DDD_Outlet_ID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Yellow_fever_vaccination_clinics__c</columns>
    <columns>Region__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Class_of_Trade__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>Mark</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>Chris</value>
    </filters>
    <filters>
        <field>Territory__c</field>
        <operation>equals</operation>
        <value>Southwest</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>Bin</value>
    </filters>
    <filters>
        <field>Source_Data__c</field>
        <operation>equals</operation>
        <value>DDD</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>Lavanyaa</value>
    </filters>
    <filters>
        <field>DDD_Outlet_ID__c</field>
        <operation>greaterThan</operation>
        <value>00000000</value>
    </filters>
    <label>All Southwest_ Accounts</label>
</ListView>