SandBox-2/force-app/main/default/objects/Account/listViews/My_National_Accounts.listView-meta.xml
<ListView>
    <fullName>My_National_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>National_Accounts__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My National Accounts</label>
</ListView>