SandBox-2/force-app/main/default/objects/Account/listViews/Northeast_Territory_Accounts.listView-meta.xml
<ListView>
    <fullName>Northeast_Territory_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory__c</field>
        <operation>equals</operation>
        <value>Northeast</value>
    </filters>
    <label>Northeast Territory Accounts</label>
</ListView>