SandBox-2/force-app/main/default/objects/Account/listViews/RAM_SouthEastAccounts.listView-meta.xml
<ListView>
    <fullName>RAM_SouthEastAccounts</fullName>
    <columns>DDD_Outlet_ID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Region__c</columns>
    <columns>Class_of_Trade__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>X2018_YTD_Typhoid_Doses__c</columns>
    <columns>X2018_YTD_Vivotif_doses__c</columns>
    <columns>X2018_YTD_Vaxchora_doses__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DDD_Outlet_ID__c</field>
        <operation>greaterThan</operation>
        <value>00000000</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Koppel</value>
    </filters>
    <label>RAM_SouthEast_Accounts</label>
</ListView>